BZ#13775: Fix vdprintf/dprintf ldbl-compat decl feature test conditional.